# snid

./: .gitignore  .pre-commit-config.yaml  .railwayignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  ROADMAP.md  SECURITY.md  WORKTREE_HYGIENE.md  justfile  mise.toml  railway.toml  start.sh
.github/: CODEOWNERS  CODEQL.yml  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  protocol_change.md
.github/workflows/: ci.yml  conformance.yml  database-benchmarks.yml  ecosystem-benchmarks.yml  extended-benchmarks.yml  nightly-benchmarks.yml  release.yml  test_go.yml  test_python.yml  test_rust.yml
benchmarks/: Dockerfile  app.py  cleanup_results.py  comparison_benchmark.py  conformance_runner.py  docker-compose.yml  docker-entrypoint.sh  ecosystem_comparison.py  llm_token_benchmark.py  performance_benchmark.py  pure_runner.py  python_ecosystem_bench.py  regression_detector.py  report_generator.py  runner.py
benchmarks/db/: README.md  docker-compose.yml  go.mod  go.sum  init.sql  main.go
benchmarks/go/: ecosystem_bench_test.go  go.mod  go.sum
benchmarks/templates/: report.html
conformance/: README.md  compare_benchmarks.py  compare_polyglot.py  run_go_bench.sh
conformance/artifacts/go-local/: bench.txt
conformance/baselines/: go.txt  rust.json
conformance/cmd/generate_vectors/: go.mod  go.sum  main.go
conformance/cmd/project_go/: go.mod  go.sum  main.go
conformance/tests/: test_compare_benchmarks.py
deploy/: CI.md  DOCKER.md  GITHUB_SECRETS.md  KUBERNETES.md  RAILWAY.md  TOKEN_SETUP.md
docs/: IMPLEMENTATION_TRACKS.md  INTEGRATION_CONTRACTS.md  SPEC.md  TOPOLOGIES.md  api-comparison.md  benchmark-methodology.md  index.md  real-specs-and-data.md  security-analysis.md  ultimate-id-perspective.md  why-snid-over-uuidv7.md  why-snid.md
docs/api/: go.md  python.md  rust.md
docs/architecture/: conformance-design.md  diagrams.md  encoding-design.md  generator-design.md
docs/guides/: ai-ml-integration.md  basic-usage.md  batch-generation.md  boundary-projections.md  compatibility-modes.md  getting-started.md  identifier-families.md  native-snid.md  neural-ids.md  quick-start.md  spatial-ids.md  storage-contracts.md  wire-format.md
docs/migration/: from-ksuid.md  from-ulid.md  from-uuid.md
docs/performance/: benchmarks.md  comparison.md  optimization-tips.md  rust-package-optimization.md
docs/troubleshooting/: common-errors.md  debugging.md  faq.md
examples/: README.md
examples/go/basic/: main.go
examples/python/: basic.py  batch.py  neural.py  spatial.py
examples/rust/basic/: main.rs
go/: adaptive.go  akid.go  akid_test.go  bid.go  boundary.go  boundary_bench_test.go  cas.go  clock.go  composite.go  composite_test.go  concurrency_stress_test.go  conformance_helpers.go  conformance_vectors_test.go  constructors.go  coverage.out  coverage_test.go  domain.go  eid.go  encoding.go  encoding_bench_test.go  encoding_test.go  extended_families_bench_test.go  flags.go  generator.go  generator_test.go  go.mod  go.sum  identity.go  lid.go  memory_profile_test.go  neural.go  neural_test.go  ontology.go  projections.go  projections_test.go  runtime_pin_fallback.go  runtime_pin_gc.go  secret_bridge.go  secret_bridge_fallback.go  singularity.go  (+12 more)
go/internal/vector/: float32.go  float32_scalar.go  int8.go  int8_scalar.go
go/neo4j/: adapter.go  adapter_test.go
python/: Cargo.toml  README.md  bench_batch.py  pyproject.toml
python/scripts/: project_vectors.py
python/snid/: __init__.py  neo4j.py
python/snid/libsnid_native.dylib.dSYM/Contents/: Info.plist
python/snid/libsnid_native.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libsnid_native.dylib.yml
python/src/: lib.rs
python/tests/: test_bench.py  test_extended_bench.py  test_properties.py  test_vectors.py
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/benches/: benchmarks.rs  ecosystem_benchmarks.rs  extended_families.rs  run_benchmarks.sh
rust/benchmark_reports/: benchmark_20260422_140425.json  benchmark_20260422_140856.json  benchmark_20260422_141244.json  benchmark_20260422_141729.json  benchmark_20260422_142126.json  benchmark_20260422_142600.json  summary_20260422_140425.txt  summary_20260422_140856.txt  summary_20260422_141244.txt  summary_20260422_141729.txt  summary_20260422_142126.txt  summary_20260422_142600.txt
rust/examples/: project_vectors.rs
rust/src/: akid.rs  capability.rs  compact.rs  conformance.rs  core.rs  encoding.rs  error.rs  generator.rs  helpers.rs  ledger.rs  lib.rs  neural.rs  projections.rs  routing.rs  spatial.rs  types.rs
rust/tests/: property_tests.rs
snhash/: README.md  api.go  bench_test.go  digest.go  digest_test.go  dir.go  dir_test.go  go.mod  go.sum  hash.go  hashid.go  manifest.go  options.go  profile.go
snhash/rust/: Cargo.toml  README.md
snhash/rust/benches/: benchmarks.rs
snhash/rust/src/: lib.rs
snhash/snidbridge/: bench_test.go  bridge.go  bridge_test.go  go.mod  go.sum
spec/: README.md
