[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "snid"
version = "0.1.0"
description = "SNID Python bindings backed by snid-core"
requires-python = ">=3.10"

[project.optional-dependencies]
data = [
  "numpy>=1.26",
  "pyarrow>=16",
  "polars>=1.0",
]
test = [
  "numpy>=1.26",
  "pytest>=8.0",
  "pytest-benchmark>=4.0",
]

[tool.maturin]
python-source = "."
module-name = "snid.snid_native"
