[build-system]
requires = ["maturin>=1.7,<3.0"]
build-backend = "maturin"

[project]
name = "snid"
version = "0.2.2"
description = "SNID Python bindings backed by snid-core - polyglot sortable identifier protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Neighbor", email = "oss@neighbor.com"}
]
keywords = ["uuid", "identifier", "sortable", "distributed", "id"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
repository = "https://github.com/LastMile-Innovations/snid"
homepage = "https://github.com/LastMile-Innovations/snid"

[project.optional-dependencies]
data = [
  "numpy>=2.5.0",
  "pyarrow>=24.0.0",
  "polars>=1.20.0",
]
test = [
  "numpy>=2.5.0",
  "pytest>=9.0.0",
  "pytest-benchmark>=6.0.0",
  "hypothesis>=6.200.0",
]
ecosystem = [
  "ulid-py>=1.1.0",
  "ksuid>=0.5.0",
  "nanoid>=2.0.0",
  "cuid2>=2.0.0",
  "snowflake-id>=0.1.0",
  "timeflake>=0.2.0",
]

[project.urls]
Documentation = "https://github.com/LastMile-Innovations/snid/blob/main/docs/SPEC.md"
Source = "https://github.com/LastMile-Innovations/snid"

[tool.maturin]
python-source = "."
module-name = "snid.snid_native"
features = ["data"]
strip = true
release = true
