[package]
name = "snid"
version = "0.2.0"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Polyglot sortable identifier protocol with UUID v7-compatible ordering and extended identifier families"
repository = "https://github.com/LastMile-Innovations/snid"
homepage = "https://github.com/LastMile-Innovations/snid"
documentation = "https://docs.rs/snid"
readme = "README.md"
keywords = ["uuid", "identifier", "sortable", "distributed", "id", "ulid", "uuidv7", "spatial", "neural"]
categories = ["data-structures", "encoding", "development-tools::build-utils"]
authors = ["Neighbor Systems <hello@neighbor.systems>"]

[features]
default = []
data = ["serde", "serde_json"]

[dependencies]
aes = "0.8"
base32 = "0.5.1"
cipher = "0.4"
getrandom = "0.2"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = "0.10"
subtle = "2.5"

[dev-dependencies]
criterion = "0.4"
proptest = "1.0"
uuid = { version = "1.0", features = ["v4"] }
ulid = "1.0"
ksuid = "0.2"
xid = "1.0"
sonyflake = "0.2"
cuid = "1.3"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "project_vectors"
required-features = ["data"]
