[package]
name = "snid"
version = "0.2.0"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Polyglot sortable identifier protocol with UUID v7-compatible ordering and extended identifier families"
repository = "https://github.com/LastMile-Innovations/snid"
homepage = "https://github.com/LastMile-Innovations/snid"
documentation = "https://docs.rs/snid"
readme = "README.md"
keywords = ["uuid", "identifier", "sortable", "distributed", "id", "ulid", "uuidv7", "spatial", "neural"]
categories = ["data-structures", "encoding", "development-tools::build-utils"]
authors = ["Neighbor Systems <hello@neighbor.systems>"]

[features]
default = []
data = ["serde", "serde_json"]
uuid = ["dep:uuid"]

[dependencies]
getrandom = "0.4"
hex = "0.4.3"
hmac = "0.13.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = "0.11"
subtle = "2.6"
uuid = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.8"
proptest = "1.0"
uuid = { version = "1.0", features = ["v4", "v7"] }
ulid = "1.0"
ksuid = "0.2"
xid = "1.0"
sonyflake = "0.4"
cuid = "2.0"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "extended_families"
harness = false

[[bench]]
name = "ecosystem_benchmarks"
harness = false

[[example]]
name = "project_vectors"
required-features = ["data"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
lto = "fat"
codegen-units = 1
