[package]
name = "snhash"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "High-performance content integrity, HASHID, evidence manifests, and SNID BID bridge support"
repository = "https://github.com/LastMile-Innovations/snhash"
authors = ["Neighbor Systems <hello@neighbor.systems>"]

[features]
default = []
snid-bridge = ["dep:snid"]

[dependencies]
blake3 = "1.8"
data-encoding = "2.10"
hex = "0.4"
hmac = "0.13"
md-5 = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.11"
sha2 = "0.11"
sha3 = "0.11"
snid = { path = "../../rust", optional = true }
twox-hash = { version = "2.1", default-features = false, features = ["std", "xxhash3_64"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
tempfile = "3.23"

[[bench]]
name = "benchmarks"
harness = false
